<resources>
    <string name="app_name">WaiApp</string>

    // Menu
    <string name="menu_question">正威無獎問答</string>
    <string name="menu_feed">餵正威</string>
    <string name="menu_love">愛正威</string>
    <string name="menu_chat">WaiChat</string>

    // Question
    <string name="question_title">無獎問答遊戲</string>
    <string name="question">考考你邊個係威頭？ (請點擊正確答案)</string>
    <string name="wrong_ans">咁簡單都唔識答！</string>

    // Feed
    <string name="wai_hungry">我餓了！快d餵我食鍾意ge意，唔係睇住我把交剪！ (拉去我嘴邊啦！)</string>
    <string name="correct_feed_first">醒目！我仲要！</string>
    <string name="correct_feed_second">Good ar! 以後跟威哥我搵食！</string>
    <string name="wrong_feed">你當我羅拔，比屎我食！</string>

    // Love
    <string name="instruction">正威需要愛，請給威威一個吻！</string>
    <string name="instruction2">對準條碼，按下方一下</string>
    <string name="wrong_barcode_response">咩黎ga食得ga？</string>
    <string name="no_barcode_response">你係咪手震啊？我見唔到bar code wo！</string>

    // Chat
    <string name="lastUpdated">最後改動：</string>

    // Chat Dialog
    <string name="dialog_add_title">新增主題</string>
    <string name="dialog_hint">請輸入主題名稱</string>
    <string name="dialog_add">加入</string>

    // Chatroom
    <string name="msg_field_hint">請輸入訊息</string>
    <string name="chat_confirm_btn">送出</string>
    <string name="title_activity_chat_room">ChatRoom</string>

    // Menu
    <string name="appbar_add">新增主題</string>
    <string name="appbar_edit">編輯</string>
    <string name="appbar_delete">刪除</string>
    <string name="appbar_logout">登出</string>

    <string name="no_msg">目前沒有任何留言</string>
    <string name="no_internet">無法連上互聯網</string>

    // Login
    <string name="enter_email">電郵：</string>
    <string name="enter_nickname">名稱</string>
    <string name="enter_password">密碼</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="forget_password">忘記密碼</string>
    <string name="email_invalid">你的電郵格式不正確</string>
    <string name="incorrect_password">輸入電郵或密碼不正確</string>
    <string name="email_wrong">你輸入的電郵地址不正確</string>
    <string name="reset_password">重設密碼電郵已寄出</string>
    <string name="email_not_verified">請到郵箱點擊鏈結，啟用帳戶</string>

</resources>
