<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tk.gengwai.waiapp.Menu">

    <Button
        android:id="@+id/btnMenuQuestion"
        android:text="@string/menu_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnMenuFeed"
        android:text="@string/menu_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnMenuLove"
        android:text="@string/menu_love"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnMenuChat"
        android:textAllCaps="false"
        android:text="@string/menu_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
