<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tk.gengwai.waiapp.CreateUserActivity">

    <EditText
        android:id="@+id/login_email"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/login_name"
        android:hint="@string/enter_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_login"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
